# Audio-Generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.documentation/: architecture.md  research-findings.md
src/audiogen/: __init__.py  config.py  main.py
src/audiogen/api/: dependencies.py  router.py
src/audiogen/api/routes/: models.py  music.py  sfx.py  voice.py
src/audiogen/cli/: main.py
src/audiogen/core/: audio_utils.py  engine.py  file_manager.py  model_manager.py
src/audiogen/engines/: audiogen.py  bark.py  chatterbox.py  musicgen.py
src/audiogen/schemas/: requests.py
src/audiogen/ui/: app.py
tests/: test_api.py  test_cli.py  test_engines.py
