[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiogen"
version = "0.1.0"
description = "Generate music, voice, and sound effects using open-source ML models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Web UI
    "gradio>=5.0",
    # CLI
    "typer[all]>=0.12",
    # Configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # ML core
    "torch>=2.1",
    "torchaudio>=2.1",
    # Audio generation engines
    "audiocraft>=1.3",
    "chatterbox-tts>=0.1",
    "suno-bark>=0.0.1a0",
    # Audio processing
    "soundfile>=0.12",
    "pydub>=0.25",
    "librosa>=0.10",
    # Utilities
    "huggingface-hub>=0.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.1",
]

[project.scripts]
audiogen = "audiogen.cli.main:app"
audiogen-server = "audiogen.main:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/audiogen"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
